vendored_parsers/tree-sitter-f-sharp/grammar.js
    file: $ =>
      seq(
        repeat($.compiler_directive_decl),
        choice(
          $.named_module,
          repeat1($.namespace),
          repeat($._module_elem),
        ),
      ),

    namespace: $ =>
      seq(
        token.immediate('namespace'),
        choice(
          'global',
          field('name', seq(optional('rec'), $.long_identifier)),
        ),
        repeat($._module_elem),
      ),

    named_module: $ =>
      seq(
        'module',
        optional($.access_modifier),
        field('name', $.long_identifier),
        repeat($._module_elem),
      ),

    _module_elem: $ =>
      choice(
        $.value_declaration,
        $.module_defn,
        $.module_abbrev,
        $.import_decl,
        $.compiler_directive_decl,
        $.fsi_directive_decl,
        $.type_definition,
        $._expression,
        // $.exception_defn
      ),

    module_defn: $ =>
      prec.left(
        seq(
          optional($.attributes),
          'module',
          optional($.access_modifier),
          $.identifier,
          '=',
          scoped(repeat1($._module_elem), $._indent, $._dedent),
        )),

    fsi_directive_decl: $ =>
      choice(
        seq('#r', $.string),
        seq('#load', $.string),
      ),

    import_decl: $ => seq('open', $.long_identifier),

    //
    // Attributes (BEGIN)
    //
    attributes: $ => prec.left(repeat1($.attribute_set)),
    attribute_set: $ =>
      seq(
        '[<',
        $.attribute,
        prec(PREC.SEQ_EXPR + 1, repeat(seq($._newline, $.attribute))),
        '>]',
      ),
    attribute: $ => seq(
      optional(seq($.attribute_target, ':')),
      $.object_construction,
    ),
    object_construction: $ =>
      prec.left(PREC.SEQ_EXPR + 1,
        seq(
          $.type,
          optional($._expression),
        )),

    //
    // Attributes (END)
    //


    value_declaration: $ =>
      seq(
        optional($.attributes),
        choice(
          prec(PREC.LET_DECL, $.function_or_value_defn),
          prec(PREC.DO_DECL, $.do),
        ),
      ),

    do: $ => prec(PREC.DO_EXPR + 1,
      seq(
        'do',
        $._expression_block,
      )),

    _function_or_value_defns: $ =>
      prec.right(
        seq($._function_or_value_defn_body, repeat(seq('and', $._function_or_value_defn_body))),
      ),

    function_or_value_defn: $ =>
      seq(
        choice('let', 'let!'),
        choice(
          $._function_or_value_defn_body,
          seq('rec', $._function_or_value_defns),
        ),
      ),

    _function_or_value_defn_body: $ =>
      seq(
        choice(
          $.function_declaration_left,
          $.value_declaration_left,
        ),
        optional(seq(':', $.type)),
        '=',
        field('body', $._expression_block),
      ),

    function_declaration_left: $ =>
      prec.left(3, seq(
        optional('inline'),
        optional($.access_modifier),
        prec(100, $._identifier_or_op),
        optional($.type_arguments),
        $.argument_patterns,
      )),

    value_declaration_left: $ =>
      prec.left(2, seq(
        optional('mutable'),
        optional($.access_modifier),
        $._pattern,
        optional($.type_arguments),
      )),

    access_modifier: _ => prec(100, token(prec(1000, choice('private', 'internal', 'public')))),
    //
    // Top-level rules (END)
    //

    //
    // Pattern rules (BEGIN)
    _pattern: $ =>
      choice(
        alias('null', $.null_pattern),
        alias('_', $.wildcard_pattern),
        alias($.const, $.const_pattern),
        $.as_pattern,
        $.disjunct_pattern,
        $.conjunct_pattern,
        $.cons_pattern,
        $.repeat_pattern,
        $.paren_pattern,
        $.list_pattern,
        $.array_pattern,
        $.record_pattern,
        $.typed_pattern,
        $.attribute_pattern,
        $.type_check_pattern,
        $.optional_pattern,
        $.identifier_pattern,
      ),

    paren_pattern: $ => seq('(', $._pattern, ')'),

    repeat_pattern: $ =>
      prec.right(
        seq(
          $._pattern,
          repeat1(prec.right(seq(',', $._pattern))),
        )),

    typed_pattern: $ => prec.left(3, seq($._pattern, ':', $.type)),

    argument_patterns: $ =>
      // argument patterns are generally no different from normal patterns.
      // however, any time an argument pattern is a valid node, (i.e. inside a beginning fun decl)
      // it is always the correct node to construct.
      prec.left(1000, repeat1($._atomic_pattern)),

    _atomic_pattern: $ =>
      prec(1000,
        choice(
          'null',
          '_',
          $.const,
          $.long_identifier,
          $.list_pattern,
          $.record_pattern,
          $.array_pattern,
          seq('(', $._pattern, ')'),
          // :? atomic_type
        )),

    identifier_pattern: $ =>
      prec.left(-1,
        seq($.long_identifier, optional($._pattern_param), optional($._pattern)),
      ),

    _pattern_param: $ =>
      prec(2,
        choice(
          $.const,
          $.long_identifier,
          // seq($.long_identifier, $._pattern_param),
          // seq($._pattern_param, ":", $.type),
          // seq(
          //   "[",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   "]",
          // ),
          // seq(
          //   "(",
          //   $._pattern_param,
          //   repeat(seq($._seperator, $._pattern_param)),
          //   ")",
          // ),
          // seq("<@", $._expression, "@>"),
          // seq("<@@", $._expression, "@@>"),
          'null',
        ),
      ),
    //
    // Pattern rules (END)
    //

    //
    // Expressions (BEGIN)
    //

    _expression_block: $ =>
      seq(
        $._indent,
        $._expression,
        $._dedent,
      ),

    _expression: $ =>
      choice(
        'null',
        $.const,
        $.paren_expression,
        $.begin_end_expression,
        $.long_identifier_or_op,
        $.dot_expression,
        $.typed_expression,
        $.infix_expression,
        $.index_expression,
        $.mutate_expression,
        $.object_instantiation_expression,
        $.list_expression,
        $.array_expression,
        $.ce_expression,
        $.prefixed_expression,
        $.brace_expression,
        $.anon_record_expression,
        $.typecast_expression,
        $.declaration_expression,
        $.do_expression,
        $.fun_expression,
        $.function_expression,
        $.sequential_expression,
        $.if_expression,
        $.while_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.literal_expression,
        // $.call_expression,
        $.tuple_expression,
        $.application_expression,
        // (static-typars : (member-sig) expr)
      ),

    tuple_expression: $ =>
      prec.left(PREC.TUPLE_EXPR,
        seq(
          $._expression,
          ',',
          $._expression,
        ),
      ),

    prefixed_expression: $ =>
      seq(
        choice('return', 'return!', 'yield', 'yield!', 'lazy', 'assert', 'upcast', 'downcast', $.prefix_op),
        prec.right(PREC.PREFIX_EXPR, $._expression),
      ),

    typecast_expression: $ =>
      prec(PREC.SPECIAL_INFIX,
        seq(
          $._expression,
          choice(
            ':',
            ':>',
            ':?',
            ':?>',
          ),
          $.type,
        )),

    for_expression: $ =>
      prec(PREC.DO_EXPR + 1,
        seq(
          'for',
          choice(
            seq($._pattern, 'in', $._expression_or_range),
            seq($.identifier, '=', $._expression, choice('to', 'downto'), $._expression),
          ),
          'do',
          $._expression_block,
          optional('done'),
        )),

    _if_then_else_expression: $ =>
      prec.left(PREC.IF_EXPR,
        seq(
          'if',
          field('guard', $._expression),
          $._then_expression,
          repeat($.elif_expression),
          $._else_expression,
        )),

    _if_then_expression: $ =>
      prec.left(PREC.IF_EXPR,
        seq(
          'if',
          field('guard', $._expression),
          $._then_expression,
          $._dedent
        )),

    if_expression: $ => choice($._if_then_expression, $._if_then_else_expression),

    declaration_expression: $ =>
      seq(
        choice(
          seq(choice('use', 'use!'), $.identifier, '=', $._expression_block),
          $.function_or_value_defn,
        ),
        field('in', $._expression)
      ),

    _expression_or_range: $ =>
      choice(
        $._expression,
        $.range_expression,
      ),

    paren_expression: $ => prec(PREC.PAREN_EXPR,
      seq(
        '(',
        $._expression_block,
        ')',
      )),

    application_expression: $ =>
      prec.left(PREC.APP_EXPR,
        seq(
          $._expression,
          choice(
            prec(PREC.APP_EXPR, $._expression),
            prec(PREC.PAREN_APP + 100, seq(token.immediate(prec(10000, '(')), optional($._expression_block), ')'),
            )
          )
        )),

    infix_expression: $ =>
      prec.left(PREC.SPECIAL_INFIX,
        seq(
          $._expression,
          $.infix_op,
          $._expression,
        )),


    sequential_expression: $ =>
      prec.right(PREC.SEQ_EXPR,
        seq(
          $._expression,
          repeat1(
            prec.right(PREC.SEQ_EXPR,
              seq(
                alias($._newline, ';'),
                $._expression,
              ),
            ),
          ),
        ),
      ),

    //
    // Expressions (END)
    //

    //
    // Computation expression (BEGIN)
    //

    type: $ =>
      prec(4, choice(
        $._simple_type,
        $._generic_type,
        $._paren_type,
        $._function_type,
        $._compound_type,
        $._postfix_type,
        $._list_type,
        $._static_type,
        $.type_argument,
        $._constrained_type,
        $._flexible_type,
      )),

    _simple_type: $ => $.long_identifier,
    _generic_type: $ => prec.right(5, seq($.long_identifier, '<', optional($.type_attributes), '>')),
    _paren_type: $ => seq('(', $.type, ')'),
    _function_type: $ => prec.right(seq($.type, '->', $.type)),
    _compound_type: $ => prec.right(seq($.type, repeat1(prec.right(seq('*', $.type))))),
    _postfix_type: $ => prec.left(4, seq($.type, $.long_identifier)),
    _list_type: $ => seq($.type, '[]'),
    _static_type: $ => prec(10, seq($.type, $.type_arguments)),
    _constrained_type: $ => prec.right(seq($.type_argument, ':>', $.type)),
    _flexible_type: $ => prec.right(seq(token.immediate('#'), $.type)),

    constraint: $ =>
      choice(
        seq($.type_argument, ':>', $.type),
        seq($.type_argument, ':', 'null'),
        seq($.static_type_argument, ':', '(', $.trait_member_constraint, ')'),
        seq($.type_argument, ':', '(', 'new', ':', 'unit', '->', '\'T', ')'),
        seq($.type_argument, ':', 'struct'),
        seq($.type_argument, ':', 'not', 'struct'),
        seq($.type_argument, ':', 'enum', '<', $.type, '>'),
        seq($.type_argument, ':', 'unmanaged'),
        seq($.type_argument, ':', 'equality'),
        seq($.type_argument, ':', 'comparison'),
        seq($.type_argument, ':', 'delegate', '<', $.type, ',', $.type, '>'),
      ),

    type_argument_constraints: $ =>
      seq(
        'when',
        $.constraint,
        repeat(seq('and', $.constraint)),
      ),

    type_argument: $ =>
      choice(
        '_',
        seq('\'', $.identifier),
        seq('^', $.identifier),
      ),

    type_argument_defn: $ =>
      seq(
        optional($.attributes),
        $.type_argument,
      ),

    static_type_argument: $ =>
      choice(
        seq(choice('^', '\''), $.identifier),
        seq(choice('^', '\''), $.identifier, repeat(seq('or', choice('^', '\''), $.identifier))),
      ),

    type_arguments: $ =>
      seq(
        '<',
        $.type_argument_defn,
        repeat(prec.left(PREC.COMMA, seq(',', $.type_argument_defn))),
        optional($.type_argument_constraints),
        '>',
      ),

    trait_member_constraint: $ =>
      seq(
        optional('static'),
        'member',
        $.identifier,
        ':',
        $.type,
      ),

    _digit_char_imm: _ => token.immediate(/[0-9]/),
    _string_char: $ => choice(
      $._simple_string_char,
      $._escape_char,
      $._non_escape_char,
      $._trigraph,
      $._unicodegraph_short,
      $._unicodegraph_long,
    ),

    string: $ =>
      choice(
        seq('"', repeat($._string_char), '"'),
        $.format_string,
      ),
    unit: _ => '()',

    const: $ => choice(
      $.sbyte, $.int16, $.int32, $.int64, $.byte, $.uint16, $.uint32, $.int,
      $.nativeint, $.unativeint, $.decimal,
      $.uint64, $.ieee32, $.ieee64, $.bignum, $.char, $.string,
      $.verbatim_string, $.triple_quoted_string, $.bytearray,
      $.verbatim_bytearray, $.bytechar, $.bool, $.unit),

    // Identifiers:
    long_identifier_or_op: $ => prec.right(
      alias(
        choice(
          $.long_identifier,
          seq($.long_identifier, '.', $._identifier_or_op),
          $._identifier_or_op,
        ),
        $.long_identifier),
    ),

    long_identifier: $ =>
      prec.right(seq($.identifier, repeat(seq('.', $.identifier)))),

    _identifier_or_op: $ => choice(
      $.identifier,
      token(prec(1000,
        seq(
          '(',
          choice(
            '?',
            /[!%&*+-./<=>@^|~][!%&*+-./<=>@^|~?]*/,
            '..',
            '.. ..',
          ),
          ')'))),
      seq('(', $.active_pattern_op_name, ')'),
      token.immediate('(*)'),
    ),

    _infix_or_prefix_op: _ =>
      choice(
        '+',
        '-',
        '+.',
        '-.',
        '%',
        '&',
        '&&',
      ),

    prefix_op: $ =>
      prec.left(
        choice(
          $._infix_or_prefix_op,
          repeat1('~'),
          /[!][!%&*+-./<>@^|~?]+[!%&*+-./<=>@^|~?]*/,
        )),

    infix_op: $ =>
      prec(PREC.INFIX_OP,
        choice(
          $._infix_or_prefix_op,
          /[-+<>|&^*/%][!%&*+-./<=>@^|~?]*/,
          '||',
          '=',
          '!=',
          ':=',
          '::',
          '$',
          'or',
          '?',
          '<@',
          '<@@',
          '@>',
          '@@>',
          '?',
          '?<-',
        )),

    // Numbers
    int: $ => seq(/[0-9]/, repeat($._digit_char_imm)),
    identifier: _ =>
      token(
        choice(
          /[_\p{XID_Start}][_'\p{XID_Continue}]*/,
          /``([^`\n\r\t])+``/,
        ),
      ),
  },

});

function scoped(rule, indent, dedent) {
  return field('block', seq(indent, rule, dedent));
}
